test/pos/kvar-param-poly-00.msmt_
; Sorts
(declare-sort Obj_alpha 0)

; Constants




; Uninterpreted Functions


; Qualifiers
(qualif Bog ((v @a0)(x @a0)) (= x v))

; Well-formedness Constraints
(wf $k0 ((lq_karg$v##k0 Obj_alpha)(lq_karg$x##k0 Obj_alpha)))

;  Constraints
(constraint (forall ((_VV##1 Obj_alpha)(x Obj_alpha)) (=> (= _VV##1 x) ($k0 _VV##1 x))))
(constraint (forall ((_VV##2 Int)(b Int)(a Int)(v Int)) (=> (and (= a 10) (and ($k0 v a) (= _VV##2 b))) (= _VV##2 10))))

